--- a/src/Core/CoreStrings.resx
+++ b/src/Core/CoreStrings.resx
@@ -126,7 +126,7 @@
     <comment>C# language name</comment>
   </data>
   <data name="EffectiveRules_CacheHit" xml:space="preserve">
-    <value>Using cached rules settings</value>
+    <value>Using cached rule settings</value>
   </data>
   <data name="EffectiveRules_CacheMiss" xml:space="preserve">
     <value>Calculating effective rule settings...</value>
