Apply issues filtering to the returned issues
* turn daemon issues into filterable issues
* call the issue filter
* process the results

TODO: the IssueFilter still needs to be implemented

Relates to #1102

--- a/src/Integration.Vsix/Resources/Strings.resx
+++ b/src/Integration.Vsix/Resources/Strings.resx
@@ -336,4 +336,8 @@
   Error: {1}</value>
     <comment>Output window message</comment>
   </data>
+  <data name="Daemon_SuppressedIssuesInfo" xml:space="preserve">
+    <value>Number of issues suppressed on the server: {0}</value>
+    <comment>Output window message</comment>
+  </data>
 </root>
