--- a/src/Integration.Vsix/Resources/Strings.resx
+++ b/src/Integration.Vsix/Resources/Strings.resx
@@ -337,7 +337,7 @@
     <comment>Output window message</comment>
   </data>
   <data name="Daemon_SuppressedIssuesInfo" xml:space="preserve">
-    <value>Number of issues suppressed on the server: {0}</value>
+    <value>Number of suppressed issues: {0}</value>
     <comment>Output window message</comment>
   </data>
 </root>
