--- a/src/Integration.Vsix/CFamily/CFamilyStrings.resx
+++ b/src/Integration.Vsix/CFamily/CFamilyStrings.resx
@@ -124,7 +124,7 @@
     <value>Execution failed. The specified executable does not exist: {0}</value>
   </data>
   <data name="ERROR_ProcessRunner_Failed" xml:space="preserve">
-    <value>Process failed, error code: {0}</value>
+    <value>Process failed. Exit code: {0}</value>
   </data>
   <data name="MSG_CmdLine_SensitiveCmdLineArgsAlternativeText" xml:space="preserve">
     <value>&lt;sensitive data removed&gt;</value>
