Don't show cancellation notification + show timeout notification

--- a/src/Integration.Vsix/Analysis/AnalysisStrings.resx
+++ b/src/Integration.Vsix/Analysis/AnalysisStrings.resx
@@ -163,11 +163,11 @@
   <data name="Settings_UsingDefaultSettings" xml:space="preserve">
     <value>Default settings will be used</value>
   </data>
-  <data name="Notifier_AnalysisCancelled" xml:space="preserve">
-    <value>SonarLint: Cancelled analysis of {0}</value>
-  </data>
   <data name="Notifier_AnalysisFinished" xml:space="preserve">
     <value>SonarLint: Finished analyzing {0}</value>
+  </data>
+  <data name="Notifier_AnalysisTimedOut" xml:space="preserve">
+    <value>SonarLint: Analysis of {0} has timed out.</value>
   </data>
   <data name="Notifier_AnalysisFailed" xml:space="preserve">
     <value>SonarLint: Failed to analyze {0}. See the Output Window for more information.</value>
