Change message to debug (#1526)

--- a/src/Integration.Vsix/CFamily/CFamilyStrings.resx
+++ b/src/Integration.Vsix/CFamily/CFamilyStrings.resx
@@ -129,8 +129,8 @@
   <data name="MSG_CmdLine_SensitiveCmdLineArgsAlternativeText" xml:space="preserve">
     <value>&lt;sensitive data removed&gt;</value>
   </data>
-  <data name="MSG_ExectutionCancelledKilled" xml:space="preserve">
-    <value>Process {0} was cancelled and killed.</value>
+  <data name="MSG_ProessRunner_ProcessKilled" xml:space="preserve">
+    <value>Process {0} was killed.</value>
   </data>
   <data name="MSG_ExecutingFile" xml:space="preserve">
     <value>Executing file {0}
