--- a/src/Integration/Binding/BindingStrings.resx
+++ b/src/Integration/Binding/BindingStrings.resx
@@ -134,6 +134,6 @@ Error: {2}</value>
   </data>
   <data name="FoundConflictingAdditionalFile" xml:space="preserve">
     <value>Failed to bind project '{0}'.
-A conflicting version of {1} has been found. Please remove '{2}', re-open the solution and try again.</value>
+A conflicting version of {1} has been found. Please delete the file '{2}' and remove references to it from your projects, then re-open the solution and try again.</value>
   </data>
 </root>
