--- a/src/IssueViz/Resources.resx
+++ b/src/IssueViz/Resources.resx
@@ -118,9 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ERR_VisualizationToolWindow_Exception" xml:space="preserve">
-    <value>Error in displaying Visualization Tool Window: {0}</value>
+    <value>Error displaying Visualization Tool Window: {0}</value>
   </data>
   <data name="ERR_VisualizationToolWindow_NoFrame" xml:space="preserve">
-    <value>Error in displaying Visualization Tool Window: cannot create window frame</value>
+    <value>Error displaying Visualization Tool Window: cannot create window frame</value>
+  </data>
+  <data name="IssueVisualizationToolWindowCaption" xml:space="preserve">
+    <value>"SonarLint Issue Visualization"</value>
   </data>
 </root>
