--- a/src/IssueViz/Resources.resx
+++ b/src/IssueViz/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ERR_NavigationException" xml:space="preserve">
-    <value>Error navigating Analysis Issue location: {0}</value>
+    <value>Error navigating to analysis issue location: {0}</value>
   </data>
   <data name="ERR_VisualizationToolWindow_Exception" xml:space="preserve">
     <value>Error displaying Visualization Tool Window: {0}</value>
