--- a/src/IssueViz/Resources.resx
+++ b/src/IssueViz/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ERR_FailedToGetFileImageMoniker" xml:space="preserve">
+    <value>Failed to get image moniker for file '{0}': {1}</value>
+  </data>
   <data name="ERR_NavigationException" xml:space="preserve">
     <value>Error navigating to analysis issue location: {0}</value>
   </data>
@@ -127,6 +130,6 @@
     <value>Error displaying Visualization Tool Window: cannot create window frame</value>
   </data>
   <data name="IssueVisualizationToolWindowCaption" xml:space="preserve">
-    <value>"SonarLint Issue Visualization"</value>
+    <value>SonarLint Issue Visualization</value>
   </data>
 </root>
