Open the relevant document when selecting secondary location

--- a/src/IssueViz/Resources.resx
+++ b/src/IssueViz/Resources.resx
@@ -123,6 +123,9 @@
   <data name="ERR_NavigationException" xml:space="preserve">
     <value>Error navigating to analysis issue location: {0}</value>
   </data>
+  <data name="ERR_OpenDocumentException" xml:space="preserve">
+    <value>Error opening file '{0}': {1}</value>
+  </data>
   <data name="ERR_VisualizationToolWindow_Exception" xml:space="preserve">
     <value>Error displaying Visualization Tool Window: {0}</value>
   </data>
