Display Visualization command in the error list context menu

--- a/src/IssueViz/Resources.resx
+++ b/src/IssueViz/Resources.resx
@@ -132,6 +132,9 @@
   <data name="ERR_VisualizationToolWindow_Exception" xml:space="preserve">
     <value>Error displaying Visualization Tool Window: {0}</value>
   </data>
+  <data name="ERR_QueryStatusVisualizationToolWindowCommand" xml:space="preserve">
+    <value>Error querying status of Visualization Tool Window command: {0}</value>
+  </data>
   <data name="ERR_VisualizationToolWindow_NoFrame" xml:space="preserve">
     <value>Error displaying Visualization Tool Window: cannot create window frame</value>
   </data>
