--- a/src/IssueViz/Resources.resx
+++ b/src/IssueViz/Resources.resx
@@ -132,13 +132,22 @@
   <data name="ERR_VisualizationToolWindow_Exception" xml:space="preserve">
     <value>Error displaying Visualization Tool Window: {0}</value>
   </data>
+  <data name="ERR_HotspotsToolWindow_Exception" xml:space="preserve">
+    <value>Error displaying Hotspots Tool Window: {0}</value>
+  </data>
   <data name="ERR_QueryStatusVisualizationToolWindowCommand" xml:space="preserve">
     <value>Error querying status of Visualization Tool Window command: {0}</value>
   </data>
   <data name="ERR_VisualizationToolWindow_NoFrame" xml:space="preserve">
     <value>Error displaying Visualization Tool Window: cannot create window frame</value>
   </data>
+  <data name="ERR_HotspotsToolWindow_NoFrame" xml:space="preserve">
+    <value>Error displaying Hotspots Tool Window: cannot create window frame</value>
+  </data>
   <data name="IssueVisualizationToolWindowCaption" xml:space="preserve">
     <value>SonarLint Issue Visualization</value>
+  </data>
+  <data name="HotspotsToolWindowCaption" xml:space="preserve">
+    <value>SonarLint Hotspots</value>
   </data>
 </root>
