--- a/src/IssueViz.Security/Resources.resx
+++ b/src/IssueViz.Security/Resources.resx
@@ -124,6 +124,6 @@
     <value>Error displaying Hotspots Tool Window: cannot create window frame</value>
   </data>
   <data name="HotspotsToolWindowCaption" xml:space="preserve">
-    <value>SonarLint Hotspots</value>
+    <value>SonarLint Security Hotspots</value>
   </data>
 </root>
