--- a/src/IssueViz.Security/OpenInIDE/OpenInIDEResources.resx
+++ b/src/IssueViz.Security/OpenInIDE/OpenInIDEResources.resx
@@ -132,27 +132,36 @@
   <data name="Factory_Succeeded" xml:space="preserve">
     <value>[Open in IDE] Request listener created successfully. Listening on port {0}.</value>
   </data>
-  <data name="RequestValidator_InvalidStateReason_NotInConnectedMode" xml:space="preserve">
-    <value>you must be in Connected Mode</value>
+  <data name="RequestValidator_InvalidState_NotInConnectedMode" xml:space="preserve">
+    <value>[Open in IDE] Could not handle Open in IDE request: you must be in Connected Mode. Bind/open a solution with the correct configuration.
+{0}</value>
   </data>
-  <data name="RequestValidator_InvalidStateReason_WrongOrganization" xml:space="preserve">
-    <value>you must connect to the right organization. Currently connected to: {0}</value>
-  </data>
-  <data name="RequestValidator_InvalidStateReason_WrongProject" xml:space="preserve">
-    <value>you must bind your solution to the right project. Currently bound to: {0}</value>
-  </data>
-  <data name="RequestValidator_InvalidStateReason_WrongServer" xml:space="preserve">
-    <value>you must connect to the right server. Currently connected to: {0}</value>
-  </data>
-  <data name="RequestValidator_InvalidState" xml:space="preserve">
-    <value>[Open in IDE] Could not handle Open in IDE request: {0}. 
+  <data name="RequestValidator_InvalidState_WrongConnection" xml:space="preserve">
+    <value>[Open in IDE] Could not handle Open in IDE request: the current solution is not bound to the requested Sonar project.
+{0}
 {1}</value>
   </data>
   <data name="RequestValidator_Instructions_SonarCloud" xml:space="preserve">
-    <value>Please open a solution connected to {0}, organization '{1}', project '{2}'.</value>
+    <value>Requested Sonar project configuration:
+    server: {0}
+    organization: {1}
+    project: {2}</value>
+  </data>
+  <data name="RequestValidator_CurrentState_SonarCloud" xml:space="preserve">
+    <value>Solution configuration:
+    server: {0}
+    organization: {1}
+    project: {2}</value>
+  </data>
+  <data name="RequestValidator_CurrentState_SonarQube" xml:space="preserve">
+    <value>Solution configuration:
+    server: {0}
+    project: {1}</value>
   </data>
   <data name="RequestValidator_Instructions_SonarQube" xml:space="preserve">
-    <value>Please open a solution connected to {0}, project '{1}'.</value>
+    <value>Requested Sonar project configuration:
+    server: {0}
+    project: {1}</value>
   </data>
   <data name="OpenHotspot_InvalidServerParameter" xml:space="preserve">
     <value>[Open in IDE] Invalid server parameter: {0}</value>
