--- a/src/IssueViz.Security/OpenInIDE/OpenInIDEResources.resx
+++ b/src/IssueViz.Security/OpenInIDE/OpenInIDEResources.resx
@@ -132,6 +132,37 @@
   <data name="Factory_Succeeded" xml:space="preserve">
     <value>[Open in IDE] Request listener created successfully. Listening on port {0}.</value>
   </data>
+  <data name="RequestValidator_InvalidState_NotInConnectedMode" xml:space="preserve">
+    <value>[Open in IDE] Could not handle Open in IDE request: you must be in Connected Mode. Bind/open a solution with the correct configuration.
+{0}</value>
+  </data>
+  <data name="RequestValidator_InvalidState_WrongConnection" xml:space="preserve">
+    <value>[Open in IDE] Could not handle Open in IDE request: the current solution is not bound to the requested Sonar project. Open a solution with the correct configuration.
+{0}
+{1}</value>
+  </data>
+  <data name="RequestValidator_Instructions_SonarCloud" xml:space="preserve">
+    <value>Requested Sonar project configuration:
+    server: {0}
+    organization: {1}
+    project: {2}</value>
+  </data>
+  <data name="RequestValidator_CurrentState_SonarCloud" xml:space="preserve">
+    <value>Solution configuration:
+    server: {0}
+    organization: {1}
+    project: {2}</value>
+  </data>
+  <data name="RequestValidator_CurrentState_SonarQube" xml:space="preserve">
+    <value>Solution configuration:
+    server: {0}
+    project: {1}</value>
+  </data>
+  <data name="RequestValidator_Instructions_SonarQube" xml:space="preserve">
+    <value>Requested Sonar project configuration:
+    server: {0}
+    project: {1}</value>
+  </data>
   <data name="OpenHotspot_InvalidServerParameter" xml:space="preserve">
     <value>[Open in IDE] Invalid server parameter: {0}</value>
   </data>
@@ -149,5 +180,8 @@
   </data>
   <data name="Pipeline_UnrecognizedRequest" xml:space="preserve">
     <value>[Open in IDE] Unrecognized request received: {0}</value>
+  </data>
+  <data name="RequestValidator_InfoBarMessage" xml:space="preserve">
+    <value>Could not handle Open in IDE request. See the Output Window for more information.</value>
   </data>
 </root>
