--- a/src/IssueViz.Security/OpenInIDE/OpenInIDEResources.resx
+++ b/src/IssueViz.Security/OpenInIDE/OpenInIDEResources.resx
@@ -120,6 +120,9 @@
   <data name="ApiHandler_FailedToFetchHotspot" xml:space="preserve">
     <value>[Open in IDE] Failed to fetch hotspot data from server: {0}</value>
   </data>
+  <data name="ApiHandler_FailedToNavigateToHotspot" xml:space="preserve">
+    <value>[Open in IDE] Failed to navigate to the requested issue. Requested file: {0}, line {1}</value>
+  </data>
   <data name="Factory_CheckingPort" xml:space="preserve">
     <value>[Open in IDE] Checking availability of port {0}</value>
   </data>
