--- a/src/IssueViz.Security/OpenInIDE/OpenInIDEResources.resx
+++ b/src/IssueViz.Security/OpenInIDE/OpenInIDEResources.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ApiHandler_FailedToFetchHotspot" xml:space="preserve">
+    <value>[Open in IDE] Failed to fetch hotspot data from server: {0}</value>
+  </data>
+  <data name="ApiHandler_FailedToNavigateToHotspot" xml:space="preserve">
+    <value>[Open in IDE] Failed to navigate to the requested issue. Requested file: {0}, line {1}</value>
+  </data>
   <data name="Factory_CheckingPort" xml:space="preserve">
     <value>[Open in IDE] Checking availability of port {0}</value>
   </data>
@@ -183,5 +189,14 @@
   </data>
   <data name="RequestValidator_InfoBarMessage" xml:space="preserve">
     <value>Could not handle Open in IDE request. See the Output Window for more information.</value>
+  </data>
+  <data name="ApiHandler_NullOrganization" xml:space="preserve">
+    <value>{none}</value>
+  </data>
+  <data name="ApiHandler_ProcessingRequest" xml:space="preserve">
+    <value>[Open in IDE] Processing request. Server: {0}, project: {1}, organization: {2}, hotspot: {3}</value>
+  </data>
+  <data name="ApiHandler_UnableToConvertHotspotData" xml:space="preserve">
+    <value>[Open in IDE] Unable to convert hotspot data: {0}</value>
   </data>
 </root>
