Add navigability column to hotspots list

--- a/src/IssueViz.Security/Resources.resx
+++ b/src/IssueViz.Security/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ERR_CannotNavigate" xml:space="preserve">
+    <value>Cannot navigate to step. The source code is different from the analyzed version</value>
+  </data>
   <data name="ERR_HotspotsToolWindow_Exception" xml:space="preserve">
     <value>Error displaying Hotspots Tool Window: {0}</value>
   </data>
