--- a/src/IssueViz.Security/HotspotsList/HotspotsListResources.resx
+++ b/src/IssueViz.Security/HotspotsList/HotspotsListResources.resx
@@ -117,10 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ERR_HotspotsToolWindow_Exception" xml:space="preserve">
-    <value>Error displaying Hotspots Tool Window: {0}</value>
-  </data>
-  <data name="HotspotsToolWindowCaption" xml:space="preserve">
-    <value>SonarLint Security Hotspots</value>
+  <data name="ERR_CannotNavigateTooltip" xml:space="preserve">
+    <value>Cannot navigate to location. The source code is different from the analyzed version.</value>
   </data>
 </root>
